# example-mod

./: CMakeLists.txt  about.md  mod.json
.github/workflows/: build.yml  multi-platform.yml
src/: main.cpp
